<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">CoolChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Composer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="conversations">Conversations</string>
    <string name="profile">Profile</string>
    <string name="jumpBottom">Jump to bottom</string>
    <string name="send">Send</string>
    <string name="author_me">me</string>
    <string name="now">8:30 PM</string>
    <string name="members">%d members</string>
    <string name="textfield_hint">Message #composers</string>
    <string name="emojis_label">Emojis</string>
    <string name="stickers_label">Stickers</string>

    <string name="system_chat">system</string>
    <string name="assistant_chat">assistant</string>
    <string name="guardian_chat">guardian</string>

    <string name="message">Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_error">There was an error loading the profile</string>
    <string name="bio">Bio</string>
    <string name="display_name">Display name</string>
    <string name="status">Status</string>
    <string name="timezone">Timezone</string>
    <string name="twitter">Twitter</string>
    <string name="common_channels">Channels in common</string>
    <string name="lorem">Lorem or Ipsum</string>

    <!-- Accessibility descriptions -->

    <string name="emoji_selector_desc">Emoji selector</string>
    <string name="emoji_selector_bt_desc">Show Emoji selector</string>
    <string name="dm_desc">Direct Message</string>
    <string name="attach_photo_desc">Attach Photo</string>
    <string name="role_selector_desc">Role</string>
    <string name="videochat_desc">Start videochat</string>
    <string name="textfield_desc">Text input</string>
    <string name="not_available">Functionality currently not available</string>
    <string name="not_available_subtitle">Grab a beverage and check back later!</string>
    <string name="attached_image">Attached image</string>
    <string name="search">Search</string>
    <string name="info">Information</string>
    <string name="more_options">More options</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="chat_key">Your Key</string>
    <string name="chat_host">Your host</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
